--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,11 +1,23 @@
 <div class="restaurant_single mt-4 mb-4">
   <h1><%= @restaurant.name %></h1>
+
   <div class="mt-4">
     <p>Address: <%=@restaurant.address %></p>
     <p>Phone number: <%=@restaurant.phone_number %></p>
     <p>Category: <%=@restaurant.category.capitalize %></p>
   </div>
+
   <h6><%= link_to "Edit",edit_restaurant_path(@restaurant) %></h6>
   <h6><%= link_to "Back to homepage", restaurants_path %></h6>
   <h6><%= link_to "leave a review",new_restaurant_review_path(@restaurant)  %></h6>
+
+  <h2>Customer reviews</h2>
+  <ul>
+    <% @restaurant.reviews.each do |review|%>
+      <div class="mt-2 mb-2">
+        <li>Rating: <%= review.rating%></li>
+        <li>Content: <%= review.content %></li>
+      </div>
+    <% end %>
+  </ul>
 </div>
