--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,8 +1,2 @@
 <h1>Add a new restaurant</h1>
-<%= simple_form_for @restaurant do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone_number %>
-  <%= f.input :category %>
-  <%= f.button :submit, class: "btn btn-primary" %>
-<% end %>
+<%= render "form", restaurant: @restaurant %>
