--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,9 +9,13 @@
 
   <h6><%= link_to "Edit",edit_restaurant_path(@restaurant) %></h6>
   <h6><%= link_to "Back to homepage", restaurants_path %></h6>
-  <h6><%= link_to "leave a review",new_restaurant_review_path(@restaurant)  %></h6>
 
   <h2>Customer reviews</h2>
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :rating, collection: 1..5 %>
+    <%= f.input :content %>
+    <%= f.button :submit, class: "btn btn-primary" %>
+  <% end %>
   <ul>
     <% @restaurant.reviews.each do |review|%>
       <div class="mt-2 mb-2">
